[B]Version 1.1.18[/B]
- fix unicode url retrieve
- Elreyx added contextmenu item to lookup same studio videos